WCAG 2.2 AA: Finishing Touches +More Colors contrast and link fix; layout landmarks (header wrap, skip link in body)
Made-with: Cursor

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -193,7 +193,7 @@ $blue: hsl(217, 71%, 53%) !default;
 $purple: hsl(271, 100%, 71%) !default;
 $red: hsl(348, 100%, 61%) !default;
 
-$more-color: #797067;
+$more-color: #5a5148;
 $pdp-accordion-border-color: #F0EDE2;
 $rating-star-color: #A37066;
 $rating-empty-star-color: #797067;
